--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
 
 
 }
