--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="CoarseFineLocation">
 
-    <uses-permission
-        android:name="android.permission.ACCESS_FINE_LOCATION"
-         />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -20,6 +18,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirebaseApp"
         tools:targetApi="31">
+        <activity
+            android:name=".AddReviewActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Review"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".Userlist"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".LocationActivity"
             android:exported="false">
@@ -89,6 +108,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+<!--        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"-->
+<!--            android:theme="@style/Base.Theme.AppCompat"-->
+<!--            tools:ignore="MissingClass" />-->
 
         <meta-data
             android:name="com.google.android.gms.version"
