--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.1.0'
     implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
     implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -53,7 +54,12 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+        api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
+
+
+
+
 
 
 
