--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -18,6 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirebaseApp"
         tools:targetApi="31">
+
         <activity
             android:name=".AddReviewActivity"
             android:exported="false">
@@ -108,9 +110,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-<!--        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"-->
-<!--            android:theme="@style/Base.Theme.AppCompat"-->
-<!--            tools:ignore="MissingClass" />-->
+
+
 
         <meta-data
             android:name="com.google.android.gms.version"
