--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,12 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 
 
