--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,16 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //implementation 'com.squareup.retrofit2:retrofit-converter:2.5.0'
+    //implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+
+
+
+
+
 
 
 
