--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         android:theme="@style/Theme.MyFirebaseApp"
         tools:targetApi="31">
         <activity
+            android:name=".UserListActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".DetailsActivity"
             android:exported="false">
             <meta-data
