--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     //implementation 'com.squareup.retrofit2:retrofit-converter:2.5.0'
     //implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    //implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation 'com.airbnb.android:lottie:5.2.0'
     //implementation 'com.github.Batterii:PagingRecycler:v1.1.1'
     //Animation
 
