--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,15 +69,25 @@ dependencies {
     //implementation 'com.github.bumptech.glide:glide:4.11.0'
     def lottieVersion = "6.0.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
-
-
-
-
-
-    //
+ //
 
     //implementation 'com.github.Batterii:PagingRecycler:v1.1.1'
     //Animation
+
+    // GraphQL Java
+    implementation 'com.graphql-java:graphql-java:15.0'
+    implementation 'com.graphql-java:graphql-java-tools:5.2.4'
+
+    // OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+
+    // Apache HttpClient (for Android projects)
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+
+
+
 
 
 
